--- a/multipurpose-on-react/src/components/HeaderSecond/HeaderSecond.module.scss
+++ b/multipurpose-on-react/src/components/HeaderSecond/HeaderSecond.module.scss
@@ -5,6 +5,7 @@
   gap: 28px;
   display: flex;
   justify-content: space-between;
+  position: relative;
 }
 
 .logo img {
@@ -135,5 +136,14 @@
     gap: 10px;
     // align-items: baseline;
     margin: 0;
+  }
+  .sun {
+    position: absolute;
+    left: calc(50% - 12px);
+    button {
+      all: unset;
+      height: 24px;
+      align-items: center;
+    }
   }
 }
