--- a/multipurpose-on-react/src/components/HeroSecond/HeroSecond.module.scss
+++ b/multipurpose-on-react/src/components/HeroSecond/HeroSecond.module.scss
@@ -20,7 +20,7 @@
 }
 .image img {
   width: 553px;
-  height: 470px;
+  max-height: 470px;
 }
 
 .paragraph-p {
@@ -58,7 +58,7 @@
     gap: 70px;
   }
   .image img {
-    width: 100%;
+    max-width: 100%;
     display: flex;
     justify-content: center;
   }
