--- a/multipurpose-on-react/src/components/OurServices/OurServices.module.scss
+++ b/multipurpose-on-react/src/components/OurServices/OurServices.module.scss
@@ -61,9 +61,15 @@
   .container {
     padding: 80px 70px;
   }
+  .h2 {
+    font-size: 35px;
+  }
 }
 @media (max-width: 767px) {
   .container {
     padding: 60px 40px;
+  }
+  .h2 {
+    font-size: 30px;
   }
 }
