--- a/multipurpose-on-react/src/components/TItleOfPage/TitleOfPage.module.scss
+++ b/multipurpose-on-react/src/components/TItleOfPage/TitleOfPage.module.scss
@@ -4,7 +4,7 @@
   font-size: 16px;
   line-height: 24px;
   display: flex;
-  justify-content: center;
+  text-align: center;
   height: 24px;
   align-items: center;
   gap: 10px;
