--- a/multipurpose-on-react/src/mixins/mixins.variables.scss
+++ b/multipurpose-on-react/src/mixins/mixins.variables.scss
@@ -11,3 +11,24 @@
     text-align: center;
   }
 }
+
+@mixin h2-styles {
+  font-weight: 600;
+  font-size: 39.0625px;
+  line-height: 59px;
+  color: #373737;
+
+  @media (max-width: 1200px) {
+    font-weight: 600;
+    font-size: 31.25px;
+    line-height: 123.6%;
+    color: #373737;
+  }
+  @media (max-width: 767px) {
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 123.6%;
+    text-align: center;
+    color: #373737;
+  }
+}
