Первый запрос на сервак для комментариев

--- a/multipurpose-on-react/src/components/HeroSecond/HeroSecond.module.scss
+++ b/multipurpose-on-react/src/components/HeroSecond/HeroSecond.module.scss
@@ -1,13 +1,8 @@
 @use '../../mixins/mixins.variables.scss';
-.content-wrapper {
-  background: #fff7f4;
-}
+
 .container {
   display: flex;
   gap: 36px;
-  padding: 0 135px;
-  margin-top: 135px;
-  padding-bottom: 150px;
   align-items: center;
 }
 
@@ -39,7 +34,7 @@
   .container {
     display: flex;
     gap: 28px;
-    padding: 0 40px;
+    // padding: 0 40px;
     margin-top: 73px;
     padding-bottom: 73px;
     align-items: center;
