--- a/multipurpose-on-react/src/components/OurCaseStudy/OurCaseStudy.module.scss
+++ b/multipurpose-on-react/src/components/OurCaseStudy/OurCaseStudy.module.scss
@@ -1,8 +1,5 @@
 @use '../../mixins/mixins.variables.scss';
 
-.container {
-  padding: 120px 135px;
-}
 .container-for-content {
   margin-top: 15px;
 
@@ -10,7 +7,7 @@
     margin-top: 15px;
     margin-bottom: 30px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     li button {
       all: unset;
       padding: 0 50px;
@@ -41,7 +38,7 @@
     flex-wrap: wrap;
     justify-content: center;
     li {
-      height: 313px;
+      max-height: 313px;
       width: 390px;
     }
   }
@@ -50,9 +47,6 @@
   display: none;
 }
 @media (max-width: 1200px) {
-  .container {
-    padding: 80px 70px;
-  }
   .ul-burger {
     overflow-x: scroll;
   }
@@ -61,11 +55,6 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      li {
-        img {
-          width: 100%;
-        }
-      }
     }
   }
   .burger {
@@ -76,9 +65,6 @@
   }
 }
 @media (max-width: 767px) {
-  .container {
-    padding: 60px 40px;
-  }
   .ul-burger {
     overflow-x: scroll;
   }
@@ -104,6 +90,8 @@
     display: flex;
     flex-direction: column;
     transition: 0.2s;
+    gap: 10px;
+
     li {
       &:hover {
         background-color: #ff5300;
