--- a/multipurpose-on-react/src/components/AboutUs/AboutUs.module.scss
+++ b/multipurpose-on-react/src/components/AboutUs/AboutUs.module.scss
@@ -48,7 +48,7 @@
   }
   .title-of-page {
     position: absolute;
-    top: 0;
+    top: -40px;
     left: calc(50% - 70px);
     margin-top: 20px;
   }
