--- a/multipurpose-on-react/src/components/OurTestimonial/OurTestimonial.module.scss
+++ b/multipurpose-on-react/src/components/OurTestimonial/OurTestimonial.module.scss
@@ -10,7 +10,6 @@
 .commentary {
   display: flex;
   justify-content: space-between;
-  max-height: 270px;
   gap: 30px;
   align-items: center;
   position: relative;
@@ -100,5 +99,59 @@
     line-height: 19px;
 
     color: #7b7b7b;
+  }
+}
+
+@media (max-width: 1200px) {
+  .commentary {
+    flex-direction: column;
+    .nav-button-first {
+      all: unset;
+      border: 1px solid #373737;
+      border-radius: 50%;
+      position: absolute;
+      top: -60px;
+      width: 50px;
+      height: 50px;
+      text-align: center;
+      margin-left: -75px;
+    }
+    .nav-button-second {
+      all: unset;
+      border: 1px solid #373737;
+      border-radius: 50%;
+      position: absolute;
+      top: -60px;
+      width: 50px;
+      height: 50px;
+      text-align: center;
+      margin-right: -75px;
+    }
+  }
+}
+@media (max-width: 767px) {
+  .commentary {
+    flex-direction: column;
+  }
+  .comment {
+    background: #ffffff;
+    padding: 24px 25px;
+    box-shadow: 0px 1px 4px rgb(0 0 0 / 10%);
+    border-radius: 10px;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .author-name {
+    flex-direction: column;
+    text-align: center;
+  }
+  .author {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
   }
 }
