--- a/multipurpose-on-react/src/components/AboutUs/AboutUs.module.scss
+++ b/multipurpose-on-react/src/components/AboutUs/AboutUs.module.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+
     li {
       display: flex;
       height: 100%;
@@ -25,7 +26,9 @@
   @include mixins.paragraph-style;
   margin-bottom: 20px;
 }
-
+.second-title {
+  display: none;
+}
 @media (max-width: 1200px) {
   .about-us {
     align-items: center;
@@ -35,11 +38,17 @@
       width: 329px;
     }
   }
+  .second-title {
+    display: none;
+  }
 }
 @media (max-width: 767px) {
   .about-us {
     display: flex;
     flex-direction: column-reverse;
+    ul {
+      align-items: center;
+    }
   }
   .container-for-img {
     img {
@@ -47,9 +56,10 @@
     }
   }
   .title-of-page {
-    position: absolute;
-    top: -40px;
-    left: calc(50% - 70px);
-    margin-top: 20px;
+    display: none;
+  }
+  .second-title {
+    display: block;
+    margin-bottom: 15px;
   }
 }
