--- a/multipurpose-on-react/src/components/OurBlog/OurBlog.module.scss
+++ b/multipurpose-on-react/src/components/OurBlog/OurBlog.module.scss
@@ -11,6 +11,7 @@
   display: flex;
   justify-content: space-between;
   gap: 30px;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
@@ -20,7 +21,7 @@
   justify-content: space-between;
   padding: 15px 15px 30px 15px;
   background: #ffffff;
-
+  max-width: 370px;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
 
@@ -55,7 +56,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 18px;
-  gap: 10px;
+
   flex-wrap: wrap;
   img {
     width: 14px;
@@ -84,7 +85,7 @@
   }
   .container {
     display: flex;
-
+    align-items: center;
     flex-direction: column;
     gap: 10px;
     justify-content: center;
@@ -95,6 +96,12 @@
       width: 87px;
     }
   }
+  .nav {
+    gap: 10px;
+  }
 }
 @media (max-width: 767px) {
+  .nav {
+    gap: 10px;
+  }
 }
