--- a/src/pages/Home/Components/OurServices/OurServices.module.css
+++ b/src/pages/Home/Components/OurServices/OurServices.module.css
@@ -11,6 +11,8 @@
   flex-wrap: wrap;
   gap: 30px;
   justify-content: center;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 .blocks li {
   width: 370px;
