--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@
   --background: #ff5300;
   --h3-orange: #ff5300;
   --border: white;
+  --background-comp: #fff7f4;
   --border-gray: #373737;
   --svg-color: #ff5300;
   --border-orange: #ff5300;
