--- a/src/pages/Home/Components/OurTestimonial/OurTestimonial.module.css
+++ b/src/pages/Home/Components/OurTestimonial/OurTestimonial.module.css
@@ -30,9 +30,7 @@
 .commentary .nav-button-first svg {
   transform: rotateY(180deg);
 }
-.commentary .test:active {
-  fill: var(--svg-color);
-}
+
 .commentary .nav-button-second {
   all: unset;
   border: 1px solid #373737;
@@ -52,11 +50,20 @@
   padding: 24px 25px;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
-  height: 270px;
+  min-height: 270px;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+.skeleton {
+  display: flex;
+  gap: 30px;
+}
+.skeleton div {
+  height: 270px;
+  width: 100%;
+  background-color: var(--white);
 }
 .author {
   display: flex;
@@ -86,6 +93,7 @@
   line-height: 19px;
   color: #7b7b7b;
 }
+
 @media (max-width: 1200px) {
   .commentary {
     flex-direction: column;
@@ -140,5 +148,8 @@
   }
   .h2 {
     margin-bottom: 80px;
+  }
+  .skeleton div {
+    flex-direction: column;
   }
 }
