--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@
   --svg-color: #ff5300;
   --border-orange: #ff5300;
   --h2-gray: #373737;
+  --aqua: #00acff;
 }
 html {
   scroll-behavior: smooth;
