--- a/src/components/HeaderSecond/HeaderSecond.module.css
+++ b/src/components/HeaderSecond/HeaderSecond.module.css
@@ -21,6 +21,18 @@
 .navigation {
   display: flex;
   align-items: center;
+  ul {
+    li {
+      a {
+        color: black;
+        text-decoration: none;
+
+        &:active {
+          color: var(--h3-orange);
+        }
+      }
+    }
+  }
 }
 .navigation ul {
   display: flex;
@@ -81,6 +93,14 @@
   .navigation {
     display: flex;
     align-items: center;
+    ul {
+      li {
+        a {
+          color: black;
+          text-decoration: none;
+        }
+      }
+    }
   }
   .navigation ul {
     display: flex;
@@ -128,7 +148,10 @@
     padding: 20px;
   }
   .nav-ul li {
-    color: black;
+    a {
+      text-decoration: none;
+      color: black;
+    }
   }
   .nav-ul li:hover {
     color: var(--h3-orange);
@@ -148,6 +171,14 @@
     flex-direction: column;
     gap: 10px;
     margin: 0;
+    ul {
+      li {
+        a {
+          color: black;
+          text-decoration: none;
+        }
+      }
+    }
   }
   .sun {
     position: absolute;
