--- a/src/pages/Main/Components/AboutUsHome/AboutUsHome.module.css
+++ b/src/pages/Main/Components/AboutUsHome/AboutUsHome.module.css
@@ -111,6 +111,10 @@
       width: 50px;
       height: 50px;
     }
+    @media (min-width: 1360px) {
+      width: 70px;
+      height: 70px;
+    }
   }
   .cover-color-1 {
     background: var(--background);
