--- a/src/pages/Main/Components/OurExpereince/OurExpereince.module.css
+++ b/src/pages/Main/Components/OurExpereince/OurExpereince.module.css
@@ -78,11 +78,7 @@
   .blocks-container {
     width: 100%;
     @media (min-width: 768px) {
-      display: flex;
-      position: relative;
-      height: 474px;
-    }
-    @media (min-width: 1360px) {
+      display: none;
     }
   }
   .blocks {
@@ -91,37 +87,11 @@
     flex-direction: column;
     align-items: center;
     gap: 25px;
-    @media (min-width: 768px) {
-      gap: 8px;
-      width: 150px;
-    }
-    @media (min-width: 1360px) {
-      width: 270px;
-      gap: 30px;
-    }
   }
   .blocks-first {
     margin-bottom: 25px;
-    @media (min-width: 768px) {
-      position: absolute;
-      left: 17%;
-      top: calc(594px / 2 - 203px);
-    }
-    @media (min-width: 1360px) {
-      top: calc(594px / 2 - 318px);
-    }
   }
-  .blocks-second {
-    @media (min-width: 768px) {
-      position: absolute;
-      left: calc(17% + 172px);
-      top: calc(594px / 2 - 187px);
-    }
-    @media (min-width: 1360px) {
-      top: calc(594px / 2 - 300px);
-      left: calc(17% + 305px);
-    }
-  }
+
   .block {
     width: 100%;
     text-align: center;
@@ -135,50 +105,105 @@
       color: var(--h2-color);
       text-transform: capitalize;
       margin-bottom: 18px;
-      @media (min-width: 768px) {
-        font-weight: 500;
-        font-size: 25px;
-        margin-bottom: 10px;
-        margin-right: 0;
-      }
-      @media (min-width: 1360px) {
-        font-weight: 600;
-        font-size: 48px;
-      }
     }
     p {
       font-weight: 400;
       font-size: 25px;
       line-height: 123.6%;
       color: var(--p-color);
-      @media (min-width: 768px) {
-        font-size: 16px;
-        line-height: 150.6%;
-      }
-      @media (min-width: 1360px) {
+    }
+  }
+  /* новыйстиль   */
+  .nex-container {
+    position: relative;
+    width: 350px;
+    height: 308px;
+    display: none;
+    @media (min-width: 768px) {
+      display: flex;
+    }
+    @media (min-width: 1360px) {
+    }
+  }
+  .test-block {
+    position: absolute;
+  }
+  .test-block-style {
+    width: 162px;
+    height: 150px;
+    background: #ffffff;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    p {
+      @media (min-width: 1447px) {
         font-weight: 500;
         font-size: 20px;
         line-height: 123.6%;
       }
     }
-    @media (min-width: 768px) {
-      width: 162px;
-      height: 150px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      padding: 0px 0px;
+    h3 {
+      @media (min-width: 768px) {
+        color: var(--h2-color);
+        text-transform: capitalize;
+        margin-bottom: 18px;
+        font-weight: 500;
+        font-size: 25px;
+        line-height: 123.6%;
+      }
+      @media (min-width: 1447px) {
+        font-weight: 700;
+        font-size: 48px;
+        line-height: 123.6%;
+        text-transform: capitalize;
+      }
     }
-    @media (min-width: 1360px) {
+
+    @media (min-width: 1447px) {
       width: 270px;
       height: 250px;
+    }
+  }
+  .position-test-1 {
+    left: 0;
+    top: -10%;
+    @media (max-width: 1018px) {
+      left: 0;
+      top: -51%;
+    }
+    @media (min-width: 1447px) {
+      left: 0;
+      top: -32%;
+    }
+  }
+  .position-test-2 {
+    right: 14px;
+    top: 0px;
+    @media (max-width: 1018px) {
+      left: 0;
+      top: 53%;
+    }
+    @media (min-width: 1447px) {
+      right: -218px;
+      top: -76px;
+    }
+  }
+  .margin-bottom-block {
+    margin-bottom: 8px;
+    @media (min-width: 1447px) {
+      margin-bottom: 30px;
     }
   }
   @media (min-width: 768px) {
     padding: 60px 40px;
     flex-direction: row;
+    /* новыйстиль */
+    justify-content: space-between;
   }
   @media (min-width: 1360px) {
     padding: 83px 135px;
+    justify-content: flex-start;
   }
 }
