--- a/src/pages/Main/Components/OurExpereince/OurExpereince.module.css
+++ b/src/pages/Main/Components/OurExpereince/OurExpereince.module.css
@@ -123,6 +123,7 @@
       display: flex;
     }
     @media (min-width: 1360px) {
+      width: 570px;
     }
   }
   .test-block {
@@ -186,7 +187,7 @@
       top: 53%;
     }
     @media (min-width: 1447px) {
-      right: -218px;
+      right: 0px;
       top: -76px;
     }
   }
@@ -204,6 +205,6 @@
   }
   @media (min-width: 1360px) {
     padding: 83px 135px;
-    justify-content: flex-start;
+    justify-content: space-between;
   }
 }
