--- a/src/pages/Home/Components/OurTestimonial/OurTestimonial.module.css
+++ b/src/pages/Home/Components/OurTestimonial/OurTestimonial.module.css
@@ -9,6 +9,7 @@
   gap: 30px;
   align-items: center;
   position: relative;
+  min-height: 271px;
 }
 .commentary button:active {
   border: 1px solid var(--border-orange);
@@ -97,6 +98,7 @@
 @media (max-width: 1200px) {
   .commentary {
     flex-direction: column;
+    min-height: none;
   }
   .commentary .nav-button-first {
     all: unset;
