--- a/src/pages/Main/Components/OurWork/OurWork.module.css
+++ b/src/pages/Main/Components/OurWork/OurWork.module.css
@@ -1,5 +1,5 @@
 .our-work-container {
-  padding: 0px 16px 120px 16px;
+  padding: 0px 16px 50px 16px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,12 +23,24 @@
 
 .nav {
   display: flex;
-  justify-content: center;
+
+  /* justify-content: center; */
+
   gap: 18px;
   overflow-x: scroll;
   align-items: center;
-  white-space: nowrap; /* Запрещаем перенос строк */
+  white-space: nowrap;
   user-select: none;
+  scroll-snap-type: x mandatory;
+  li {
+    width: 100%;
+  }
+  @media (min-width: 768px) {
+    gap: 43px;
+  }
+  @media (min-width: 1360px) {
+    overflow-x: unset;
+  }
 }
 .images-container {
   display: flex;
@@ -41,8 +53,66 @@
     max-width: 100%;
   }
 }
+.nav-container {
+  width: 94vw;
+  display: flex;
+  justify-content: center;
+  ul {
+    margin: 0 16px;
+    li {
+      scroll-snap-align: center;
+    }
+  }
+  @media (min-width: 768px) {
+    max-width: 649px;
+  }
+}
+.image-container {
+  position: relative;
+}
+.hover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: var(--background);
+
+  opacity: 0.7;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  img {
+    max-width: 40px;
+    height: 40px;
+  }
+}
+.image-content {
+  ul {
+    li {
+      h5 {
+        margin-top: 27px;
+        margin-bottom: 18px;
+        font-weight: 500;
+        font-size: 25px;
+        line-height: 123.6%;
+        color: var(--white);
+      }
+      h6 {
+        margin-bottom: 47px;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 150.6%;
+        color: var(--white);
+      }
+    }
+  }
+}
 
 @media (min-width: 768px) {
+  .our-work-container {
+    padding: 0px 40px 120px 40px;
+  }
   .h2-style {
     font-weight: 600;
     font-size: 31.25px;
