--- a/src/pages/Main/Components/ClientsFeedback/ClientsFeedback.module.css
+++ b/src/pages/Main/Components/ClientsFeedback/ClientsFeedback.module.css
@@ -16,9 +16,15 @@
   @media (min-width: 768px) {
     margin-top: 18px;
     margin-bottom: 60px;
+    font-weight: 600;
+    font-size: 31.25px;
+    line-height: 123.6%;
   }
   @media (min-width: 1360px) {
     margin-top: 25px;
+    font-weight: 600;
+    font-size: 39.06px;
+    line-height: 123.6%;
   }
 }
 
@@ -113,6 +119,7 @@
   height: 15px;
   border-radius: 7.5px;
   cursor: pointer;
+  transition: 0.2s ease-in-out;
   &:hover {
     opacity: 0.5;
   }
