--- a/src/pages/Main/Components/OurBlog/OurBlog.module.css
+++ b/src/pages/Main/Components/OurBlog/OurBlog.module.css
@@ -42,10 +42,12 @@
   @media (min-width: 768px) {
     gap: 20px;
     margin-bottom: 40px;
+    min-height: 256px;
   }
   @media (min-width: 1360px) {
     gap: 29px;
     margin-bottom: 60px;
+    min-height: 329px;
   }
 }
 
