--- a/src/pages/Main/Components/Form/Form.module.css
+++ b/src/pages/Main/Components/Form/Form.module.css
@@ -2,11 +2,22 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  @media (min-width: 768px) {
+    flex-direction: row;
+    width: 100%;
+    align-items: flex-end;
+  }
 }
 
 .form-image {
   width: 100%;
   margin-bottom: 50px;
+  @media (min-width: 768px) {
+    max-width: 342px;
+  }
+  @media (min-width: 1360px) {
+    max-width: 632px;
+  }
 }
 
 .form-h2 {
@@ -16,16 +27,40 @@
   color: var(--h2-style);
   text-align: center;
   margin-bottom: 18px;
+
+  @media (min-width: 768px) {
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 123.6%;
+    text-align: left;
+  }
   @media (min-width: 1360px) {
     font-weight: 600;
     font-size: 31.25px;
     line-height: 123.6%;
   }
 }
+.content-container {
+  width: 100%;
+}
 .input-container {
   width: 100%;
   display: flex;
   flex-direction: column;
+}
+.two-input-container {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+  @media (min-width: 768px) {
+    .input {
+      width: 100%;
+    }
+    flex-direction: row;
+    gap: 10px;
+    width: 100%;
+    justify-content: space-between;
+  }
 }
 .inputs {
   display: flex;
@@ -58,4 +93,7 @@
 
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 25px;
+  @media (min-width: 768px) {
+    width: 100%;
+  }
 }
