--- a/src/pages/Main/Components/Header/Header.module.css
+++ b/src/pages/Main/Components/Header/Header.module.css
@@ -142,14 +142,19 @@
 
 .animated {
   animation: animated-burger 0.5s ease-in-out;
-  animation-duration: 0.5s;
 }
 
 @keyframes animated-burger {
   0% {
     opacity: 0;
+    margin-top: -20px;
   }
+  50% {
+    opacity: 0.5;
+  }
+
   100% {
     opacity: 1;
+    margin-top: 0;
   }
 }
