--- a/src/pages/Main/Components/Form/Form.module.css
+++ b/src/pages/Main/Components/Form/Form.module.css
@@ -53,9 +53,6 @@
   flex-direction: column;
   gap: 18px;
   @media (min-width: 768px) {
-    .input {
-      width: 100%;
-    }
     flex-direction: row;
     gap: 10px;
     width: 100%;
@@ -87,13 +84,28 @@
   all: unset;
   width: 100%;
   min-height: 163px;
-
+  line-break: anywhere;
   background: #ffffff;
   height: 24px;
-
+  display: flex;
+  flex-direction: column;
+  padding: 18px;
+  box-sizing: border-box;
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
-  margin-bottom: 25px;
+
   @media (min-width: 768px) {
     width: 100%;
   }
+}
+.text-area-container {
+  margin-bottom: 25px;
+}
+.input-with-error {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.input {
+  max-width: 330px;
 }
