--- a/src/pages/Main/Components/OurWork/OurWork.module.css
+++ b/src/pages/Main/Components/OurWork/OurWork.module.css
@@ -129,6 +129,8 @@
     max-width: calc(213px * 3 + 24px * 2);
     img {
       width: 213px;
+      height: 100%;
+      object-fit: cover;
     }
   }
   .test {
