--- a/src/pages/Home/Components/OurCapabilities/OurCapabilities.module.css
+++ b/src/pages/Home/Components/OurCapabilities/OurCapabilities.module.css
@@ -1,6 +1,6 @@
 .block {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin-bottom: 120px;
   gap: 11px;
   align-items: center;
