--- a/src/pages/Main/Components/Hero/Hero.module.css
+++ b/src/pages/Main/Components/Hero/Hero.module.css
@@ -44,9 +44,9 @@
     flex-direction: row-reverse;
     justify-content: space-between;
   }
-  /* @media (min-width: 1360px) {
-    box-shadow: 0px 10px 13px -9px rgb(0 0 0 / 10%) inset;
-  } */
+  @media (min-width: 1360px) {
+    justify-content: center;
+  }
 }
 
 .inner-block {
