--- a/src/pages/Home/Components/OurTestimonial/OurTestimonial.module.css
+++ b/src/pages/Home/Components/OurTestimonial/OurTestimonial.module.css
@@ -19,6 +19,7 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  cursor: pointer;
 }
 .commentary .nav-button-first {
   all: unset;
@@ -30,6 +31,7 @@
   height: 50px;
   text-align: center;
   margin-left: -75px;
+  cursor: pointer;
   @media (max-width: 1360px) {
     left: 50%;
 
@@ -55,6 +57,7 @@
   height: 50px;
   text-align: center;
   margin-right: -75px;
+  cursor: pointer;
   @media (max-width: 1360px) {
     right: 50%;
 
