--- a/src/pages/Main/Components/OurWork/OurWork.module.css
+++ b/src/pages/Main/Components/OurWork/OurWork.module.css
@@ -34,6 +34,7 @@
   scroll-snap-type: x mandatory;
   li {
     width: 100%;
+    cursor: pointer;
   }
   @media (min-width: 768px) {
     gap: 43px;
