--- a/src/components/siteBlocks/SiteBlocks.module.css
+++ b/src/components/siteBlocks/SiteBlocks.module.css
@@ -17,6 +17,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
     &:active {
       background-color: var(--background);
     }
