--- a/src/components/BlogHero/TitleBlogHero.module.css
+++ b/src/components/BlogHero/TitleBlogHero.module.css
@@ -6,6 +6,7 @@
   background: var(--background-comp);
   box-shadow: 1px 6px 8px -9px inset;
   gap: 18px;
+  text-align: center;
   h1 {
     font-weight: 600;
     font-size: 31.25px;
