--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -3,13 +3,15 @@
 
   flex-direction: column;
   gap: 50px;
-
+  padding: 50px 16px 50px 16px;
   justify-content: center;
   @media (min-width: 768px) {
     flex-direction: row;
     gap: 24px;
+    padding: 60px 40px 120px 40px;
   }
   @media (min-width: 1360px) {
     gap: 30px;
+    padding: 120px 135px 120px 135px;
   }
 }
