--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -120,12 +120,25 @@
   padding: 10px;
   position: absolute;
   right: 0;
-  top: 70px;
+  top: 48px;
+  width: 100%;
+  text-align: center;
+  z-index: 100;
   li:active {
     color: var(--h3-orange);
   }
-
+  li:hover {
+    background-color: var(--h3-orange);
+    a {
+      color: white;
+    }
+  }
   li {
+    height: 50px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     a {
       text-decoration: none;
       color: black;
@@ -137,24 +150,36 @@
 }
 
 .visible {
-  display: none;
+  transform: rotate3d(1, 0, 0, 90deg);
+  transform-origin: top;
+  pointer-events: none;
+  transition: 0.5s;
 }
 
 .animated {
   animation: animated-burger 0.5s ease-in-out;
+  transform-origin: top;
 }
 
 @keyframes animated-burger {
   0% {
-    opacity: 0;
-    margin-top: -20px;
+    transform: rotate3d(1, 0, 0, 90deg);
   }
   50% {
     opacity: 0.5;
   }
 
   100% {
-    opacity: 1;
-    margin-top: 0;
+    transform: rotate3d(1, 0, 0, 0deg);
   }
 }
+
+/* @keyframes animated-burger-reverse {
+  0% {
+    transform: rotate3d(1, 0, 0, 0deg);
+  }
+
+  100% {
+    transform: rotate3d(1, 0, 0, 90deg);
+  }
+} */
