4 страница, пагинацию не получается сделать серверной через get('ink')

--- a/src/pages/Main/Components/ClientsFeedback/ClientsFeedback.module.css
+++ b/src/pages/Main/Components/ClientsFeedback/ClientsFeedback.module.css
@@ -113,3 +113,11 @@
   gap: 4px;
   margin-top: 60px;
 }
+.non-animated {
+  transform: rotate3d(1, 0, 0, -90deg);
+  transition: 1s;
+}
+.animated {
+  transform: rotate3d(1, 0, 0, 0deg);
+  transition: 1s;
+}
