--- a/src/pages/Blog/Components/BlogArticle/BlogArticle.module.css
+++ b/src/pages/Blog/Components/BlogArticle/BlogArticle.module.css
@@ -4,6 +4,7 @@
   gap: 40px;
 
   max-width: 100%;
+  min-width: 250px;
   margin-bottom: 50px;
   @media (max-width: 767px) {
     margin-bottom: 50px;
