--- a/src/pages/Main/Components/AboutUsHome/AboutUsHome.module.css
+++ b/src/pages/Main/Components/AboutUsHome/AboutUsHome.module.css
@@ -140,3 +140,13 @@
     align-items: none;
   }
 }
+.non-animated {
+  opacity: 0;
+  margin-right: -20px;
+  transition: 1s;
+}
+.animated {
+  opacity: 1;
+  transition: 1s;
+  margin-right: 0px;
+}
