--- a/src/pages/Main/Components/Hero/Hero.module.css
+++ b/src/pages/Main/Components/Hero/Hero.module.css
@@ -60,3 +60,13 @@
     }
   }
 }
+.non-animated {
+  opacity: 0;
+  margin-right: -20px;
+  transition: 1s;
+}
+.animated {
+  opacity: 1;
+  transition: 1s;
+  margin-right: 0px;
+}
