--- a/src/pages/Blog/Components/Posts/Posts.module.css
+++ b/src/pages/Blog/Components/Posts/Posts.module.css
@@ -65,3 +65,36 @@
     text-align: center;
   }
 }
+.buttons-container {
+  display: flex;
+  gap: 18px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  border: 1px solid #ff5300;
+  background-color: transparent;
+  color: #ff5500;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 123.6%;
+  &:hover {
+    background-color: rgba(255, 85, 0, 0.253);
+  }
+  &:active {
+    background-color: #ff5500;
+    color: white;
+  }
+}
+
+.active-button {
+  background: #ff5300;
+  color: white;
+}
