Начал делать темную тему

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,6 +1,6 @@
 .button {
   all: unset;
-  background-color: var(--background);
+  background-color: var(--smart-button);
   display: inline-block;
   cursor: pointer;
   padding: 10px 22px;
