--- a/src/pages/Home/Components/OurCapabilities/OurCapabilities.module.css
+++ b/src/pages/Home/Components/OurCapabilities/OurCapabilities.module.css
@@ -8,6 +8,7 @@
 .h2-style {
   margin-top: 15px;
   margin-bottom: 18px;
+  color: var(--title-of-block);
 }
 .p-style {
   margin-bottom: 40px;
@@ -27,25 +28,26 @@
   width: 125px;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
+  background-color: var(--our-services-blocks);
 }
 .ul-styles li h3 {
   font-weight: 600;
   font-size: 25px;
   line-height: 38px;
   text-align: center;
-  color: var(--h3-orange);
+  color: var(--orange-permanent);
 }
 .ul-styles li h4 {
   font-weight: 300;
   font-size: 12.8px;
   line-height: 19px;
   text-align: center;
-  color: var(--h2-gray);
+  color: var(--paragraph);
 }
 .performance {
   display: flex;
   justify-content: space-between;
-  background: var(--background);
+  background: var(--orange-permanent);
   border-radius: 10px;
   padding: 70px 60px;
   align-items: center;
@@ -53,7 +55,7 @@
 .vertical-line {
   width: 3px;
   min-height: 134px;
-  background-color: var(--white);
+  background-color: white;
 }
 .content {
   display: flex;
@@ -66,13 +68,13 @@
   font-weight: 600;
   font-size: 39.0625px;
   line-height: 59px;
-  color: var(--white);
+  color: white;
 }
 .content h4 {
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
-  color: var(--white);
+  color: white;
 }
 .img-style img {
   max-width: 50px;
@@ -107,13 +109,13 @@
     font-weight: 600;
     font-size: 20px;
     line-height: 59px;
-    color: var(--white);
+    color: white;
   }
   .content h4 {
     font-weight: 500;
     font-size: 16px;
     line-height: 30px;
-    color: var(--white);
+    color: white;
   }
 }
 @media (max-width: 767px) {
@@ -145,6 +147,6 @@
     margin: 10px 0;
   }
   .content h3 {
-    margin: 0 var(--white);
+    margin: 0 white;
   }
 }
