--- a/src/pages/Home/Components/OurCaseStudy/OurCaseStudy.module.css
+++ b/src/pages/Home/Components/OurCaseStudy/OurCaseStudy.module.css
@@ -8,7 +8,7 @@
   justify-content: center;
 }
 
-.ul-burger button {
+.ul-burger li button {
   background-color: none;
   border: none;
   outline: none;
@@ -19,7 +19,7 @@
 
   font-size: 17px;
 
-  color: var(--p-color);
+  color: var(--paragraph);
   text-align: center;
   /* transition: 0.2s; */
   border-radius: 10px;
@@ -29,6 +29,7 @@
 }
 .h2-styles {
   text-align: center;
+  color: var(--title-of-block);
 }
 .blocks ul {
   display: flex;
@@ -60,14 +61,14 @@
   opacity: 0.75;
   margin-left: 10%;
   margin-top: 10%;
-  background-color: var(--background);
+  background-color: rgba(255, 83, 0, 0.75);
   top: 0;
   flex-direction: column;
   text-align: center;
   cursor: pointer;
 }
 .orange-box h2 {
-  color: var(--white);
+  color: #fff;
   font-weight: 600;
   font-size: 25px;
   line-height: 38px;
@@ -111,10 +112,6 @@
     width: 100%;
   }
 
-  .ul-burger {
-    overflow-x: scroll;
-  }
-
   .blocks ul {
     display: flex;
     flex-wrap: wrap;
@@ -131,6 +128,11 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    li {
+      button {
+        color: var(--paragraph);
+      }
+    }
   }
   .orange-box h2 {
     font-size: 16px;
