--- a/src/pages/Main/Components/Form/Form.module.css
+++ b/src/pages/Main/Components/Form/Form.module.css
@@ -72,7 +72,7 @@
   width: 100%;
   input {
     all: unset;
-    background: #ffffff;
+    background: var(--white);
     height: 24px;
     padding: 18px;
     box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
@@ -90,7 +90,7 @@
   width: 100%;
   min-height: 163px;
   line-break: anywhere;
-  background: #ffffff;
+  background: var(--white);
   height: 24px;
   display: flex;
   flex-direction: column;
