--- a/src/pages/Main/Components/OurExpereince/OurExpereince.module.css
+++ b/src/pages/Main/Components/OurExpereince/OurExpereince.module.css
@@ -92,7 +92,7 @@
     }
   }
   .block {
-    background: #ffffff;
+    background: var(--white);
     box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
     height: 250px;
     flex-direction: column;
