--- a/src/pages/Blog/Components/BlogArticle/BlogArticle.module.css
+++ b/src/pages/Blog/Components/BlogArticle/BlogArticle.module.css
@@ -150,7 +150,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 1px solid #7b7b7b;
+  border: 1px solid var(--p-color);
 
   width: 30px;
   height: 30px;
