--- a/src/pages/Home/Components/AboutUs/AboutUs.module.css
+++ b/src/pages/Home/Components/AboutUs/AboutUs.module.css
@@ -17,6 +17,7 @@
   height: 100%;
   align-items: center;
   gap: 17px;
+  color: var(--about-us-li);
 }
 .h2-style {
   margin-top: 15px;
@@ -24,6 +25,7 @@
   margin-left: -20px;
   opacity: 0;
   transition: 1s;
+  color: var(--title-of-block);
 }
 .paragraph {
   margin-bottom: 20px;
