--- a/src/pages/Home/Components/FooterSecond/FooterSecond.module.css
+++ b/src/pages/Home/Components/FooterSecond/FooterSecond.module.css
@@ -5,6 +5,13 @@
   background-repeat: no-repeat;
   color: var(--white);
 }
+.logo {
+  span {
+    color: var(--title-header-first);
+  }
+
+  color: var(--white-permanent);
+}
 .data-footer {
   display: flex;
   justify-content: space-between;
@@ -19,27 +26,24 @@
   font-weight: 600;
   font-size: 25px;
   line-height: 38px;
-  color: var(--h3-orange);
+  color: var(--orange-permanent);
 }
 .container p {
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
-  color: var(--white);
+  color: var(--white-permanent);
 }
-.logo-footer span {
-  color: var(--h3-orange);
-}
+
 .logo-footer h3 {
   font-size: 39.06px;
   line-height: 46px;
-  color: var(--white);
 }
 .logo-footer p {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  color: var(--white);
+  color: var(--white-permanent);
 }
 .container-of-buttons {
   display: flex;
@@ -64,13 +68,16 @@
   display: flex;
   justify-content: space-between;
   border-top: 2px solid var(--white);
-  margin-top: 60px;
+
   align-items: center;
 }
 .text-content {
   display: flex;
   align-items: center;
   gap: 20px;
+  p {
+    color: var(--white-permanent);
+  }
 }
 .text-content:first-child {
   font-size: 20px;
@@ -79,6 +86,42 @@
   font-size: 16px;
   line-height: 150.6%;
   color: var(--white);
+}
+.privacy-container {
+  display: flex;
+  gap: 100px;
+  align-items: center;
+  flex-wrap: wrap;
+  @media (max-width: 942px) {
+    gap: 20px;
+  }
+}
+.privacy {
+  display: flex;
+  gap: 30px;
+}
+.circle {
+  width: 15px;
+  height: 15px;
+  border-radius: 100%;
+  background: var(--orange-permanent);
+}
+.circle-and-p {
+  display: flex;
+  align-items: center;
+  gap: 11px;
+  p {
+    color: var(--white-permanent);
+  }
+}
+.line {
+  display: block;
+  float: top;
+  width: 100%;
+  height: 1px;
+  margin-top: 60px;
+  margin-bottom: 20px;
+  background-color: var(--white-permanent);
 }
 @media (max-width: 1200px) {
   .wrapper {
