--- a/src/pages/Home/Components/HeroSecond/HeroSecond.module.css
+++ b/src/pages/Home/Components/HeroSecond/HeroSecond.module.css
@@ -8,7 +8,7 @@
   font-weight: 700;
   font-size: 48.83px;
   line-height: 73px;
-  color: var(--h2-gray);
+  color: var(--home-hero-h1-color);
   margin-bottom: 18px;
 }
 .image img {
@@ -18,6 +18,7 @@
 .paragraph-p {
   margin-bottom: 30px;
 }
+
 @media (max-width: 1200px) {
   .paragraph-h1 {
     font-style: normal;
