--- a/src/pages/Home/Components/OurBlog/OurBlog.module.css
+++ b/src/pages/Home/Components/OurBlog/OurBlog.module.css
@@ -2,6 +2,7 @@
   text-align: center;
   margin-top: 15px;
   margin-bottom: 60px;
+  color: var(--title-of-block);
 }
 .container {
   display: flex;
@@ -15,7 +16,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 15px 15px 30px 15px;
-  background: var(--white);
+  background: var(--our-testimonial-blocks);
   max-width: 370px;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
@@ -25,7 +26,7 @@
   font-size: 20px;
   line-height: 30px;
   margin-bottom: 15px;
-  color: var(--h2-gray);
+  color: var(--home-hero-h1-color);
 }
 .blog-post button {
   width: 150px;
@@ -60,7 +61,10 @@
 .nav div h5 {
   font-size: 10.24px;
   line-height: 19px;
-  color: var(--h2-gray);
+  color: var(--home-hero-h1-color);
+}
+.smart-button button {
+  color: #fff;
 }
 @media (max-width: 1200px) {
   .blog-post {
