--- a/src/pages/Main/Components/OurBlog/OurBlog.module.css
+++ b/src/pages/Main/Components/OurBlog/OurBlog.module.css
@@ -52,7 +52,7 @@
 }
 
 .post {
-  background: #ffffff;
+  background: var(--white);
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
   padding: 19px 18px 28px 18px;
   background-color: var(--white);
