--- a/src/pages/Main/Components/TeamMember/TeamMember.module.css
+++ b/src/pages/Main/Components/TeamMember/TeamMember.module.css
@@ -43,7 +43,7 @@
     width: 270px;
     position: relative;
     height: 350px;
-    background: #ffffff;
+    background: var(--white);
     box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
   }
   .author {
